@@ -8,6 +8,7 @@ Version 0.01.1c
 number type, by changing floating to fixed point in internal calculations. Types
 are now restricted to char, unsigned char, int and unsigned int.
 - fixedMath.h: added some types and fixed some mistakes
+- utils.h: hardcoded midiToFreq[] array to progmem instead of generating on startup
 
 Version 0.01.1b
 
